edit: Fix buttons on small displays

--- a/css/edit.css
+++ b/css/edit.css
@@ -19,13 +19,21 @@ header {
     margin-bottom: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    flex-wrap: wrap;
 }
 
 header .left {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 0.5rem;
 }
+
+@media (min-width: 700px) {
+    header .left {
+        flex-direction: row;
+    }
+}
+
 
 header .right {
     display: flex;
